added tslint commands; LESS stylesheets; basic page structure

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,4 +1,7 @@
 <html>
+  <head>
+    <link href="./less/index.less" rel="stylesheet">
+  </head>
   <body>
     <div id="root"></div>
     <script src="./js/index.tsx"></script>
