--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,5 +1,7 @@
+<!DOCTYPE html>
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="./less/index.less" rel="stylesheet">
   </head>
   <body>
