--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,6 +6,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script src="./js/index.tsx"></script>
+    <script src="./ts/index.tsx"></script>
   </body>
 </html
