--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,8 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="shortcut icon" href="/favicons/favicon.ico"/>
+    <link rel="apple-touch-icon" sizes="180x180" href="/favicons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicons/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="./less/index.less" rel="stylesheet">
+    <title>MultiMix</title>
   </head>
   <body>
     <div id="root"></div>
