added open graph tags

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,6 +9,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="./less/index.less" rel="stylesheet">
     <title>MultiMix</title>
+    <meta property="og:title" content="MultiMix" />
+    <meta property="og:description" content="A noncustodial Ethereum mixer" />
+    <meta property="og:image" content="/favicons/android-chrome-512x512.png" />
+
   </head>
   <body>
     <div id="root"></div>
