--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,8 +10,11 @@
     <link href="./less/index.less" rel="stylesheet">
     <title>MultiMix</title>
     <meta property="og:title" content="MultiMix" />
+    <meta property="og:url" content="https://multimix.app" />
     <meta property="og:description" content="A noncustodial Ethereum mixer" />
-    <meta property="og:image" content="/favicons/android-chrome-512x512.png" />
+    <meta property="og:image" content="/img/og.png" />
+    <meta property="og:image:width" content="512" />
+    <meta property="og:image:height" content="512" />
 
   </head>
   <body>
