renamed to MicroMix

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,9 +8,9 @@
     <link rel="manifest" href="/site.webmanifest">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="./less/index.less" rel="stylesheet">
-    <title>MultiMix</title>
-    <meta property="og:title" content="MultiMix" />
-    <meta property="og:url" content="https://multimix.app" />
+    <title>MicroMix</title>
+    <meta property="og:title" content="MicroMix" />
+    <meta property="og:url" content="https://micromix.app" />
     <meta property="og:description" content="A noncustodial Ethereum mixer" />
     <meta property="og:image" content="/img/og.png" />
     <meta property="og:image:width" content="1200" />
