updated semaphore; made contracts and backend use libsemaphore

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,9 +5,7 @@
     <link rel="apple-touch-icon" sizes="180x180" href="/favicons/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicons/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="./less/index.less" rel="stylesheet">
     <title>MicroMix</title>
     <meta property="og:title" content="MicroMix" />
     <meta property="og:url" content="https://micromix.app" />
@@ -19,6 +17,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script src="./ts/index.tsx"></script>
+    <!--<script src="./ts/index.tsx"></script>-->
   </body>
-</html
+</html>
